--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,17 @@
 language: node_js
 node_js:
-  - "node"
+  - 10
+  - 8
+  - 6
+  - node
+branch:
+  only:
+  - master
+cache: npm
+script:
+- npm run lint
+- npm test
+- npm run coveralls
 deploy:
   provider: npm
   email: h.nsr69@gmail.com
