--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
         "alldebrid": "main.js"
     },
     "devDependencies": {
-        "jshint": "^2.9.7"
+        "coveralls": "^3.0.2",
+        "eslint": "^5.12.0",
+        "jest": "^23.6.0"
     },
     "scripts": {
-        "test": "jshint main.js"
+        "coveralls": "jest --coverage && cat ./coverage/lcov.info | coveralls",
+        "lint": "eslint .",
+        "test": "jest --coverage"
     }
 }
